--- a/style.css
+++ b/style.css
@@ -4,11 +4,28 @@
   box-sizing: border-box;
 }
 
-.calc {
+.calc,
+.calc-history {
   width: 200px;
   margin: 0 auto;
 }
 
+.calc-history {
+  height: 324px;
+  margin-top: 30px;
+  border-top: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 1px solid gray;
+  background-color: rgb(226, 226, 226);
+  overflow: auto;
+}
+
+.calc-container {
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  margin: 0 auto;
+}
 button {
   height: 50px;
   width: 50px;
@@ -62,6 +79,10 @@ button {
   border-top: 1px solid gray;
   margin: 30px 0 0 -1px;
   padding-right: 5px;
+}
+
+.darken {
+  filter: brightness(90%);
 }
 
 button:hover {
