--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgb(231, 231, 231);
+}
+
+h2 {
+  display: flex;
+  font-size: xx-large;
+  justify-content: center;
+  margin: 0 auto;
+  width: 400px;
+}
+
 .calc,
 .calc-history {
   width: 200px;
@@ -25,6 +37,7 @@
   flex-direction: row;
   width: 400px;
   margin: 0 auto;
+  justify-content: center;
 }
 button {
   height: 50px;
@@ -92,4 +105,10 @@ button:hover {
 
 button:active {
   filter: brightness(60%);
+}
+
+@media screen and (max-width: 500px) {
+  .calc-history {
+    display: none;
+  }
 }
