--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ button {
   border-left: 1px solid gray;
   margin: -1px 0 0 -1px;
   padding-right: 5px;
+  overflow: hidden;
 }
 
 .result-field {
@@ -92,6 +93,7 @@ button {
   border-top: 1px solid gray;
   margin: 30px 0 0 -1px;
   padding-right: 5px;
+  overflow: hidden;
 }
 
 .darken {
